# wind-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  windows-release.yml
docs/: ai-agent-cli-spec.md  llm-wiki-sdk-design.md  release-notes-windows.md  release-process.md  wind-demo-design.md  wind-demo-mockup.html  wind-demo-prd.md  windcli_design.md
install/: install.ps1
notes/: windcli-agent-protocol-v02-implementation.md  windcli-agent-protocol-v02-product.md
src/: app.rs  cli.rs  config.rs  errors.rs  main.rs  tools.rs
src/extract/: magic.rs  mod.rs
src/extract/formats/: html.rs  img.rs  md.rs  mod.rs  pdf.rs  pptx.rs  xlsx.rs
src/platform/: mod.rs
src/windlocal/: mod.rs
src/workspace/: mod.rs
tests/: cli_smoke.rs
