[package]
name = "windcli"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "windcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
urlencoding = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
