[package]
name = "windcli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "windcli"
path = "src/main.rs"

[[bin]]
name = "wind"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
urlencoding = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
ureq = "2"

# Phase 2: extract command dependencies
calamine = { version = "0.26", features = ["dates"] }
lopdf = "0.34"      # PDF parsing — pure Rust
scraper = "0.21"    # HTML text extraction — CSS selectors
image = "0.25"     # Image metadata (dimensions, color type, bit depth)
zip = "2.1"         # ZIP archive reading (pptx is a zip of XML)
roxmltree = "0.20" # XML parsing for PPTX slide text
base64 = "0.22"    # Base64 encoding for image content

# LLM Wiki SDK (publish to crates.io separately)
wind-wiki = { path = "../wind-wiki" }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
